Align the filter radio buttons correctly

--- a/src/screens/OrganizationPeople/OrganizationPeople.module.css
+++ b/src/screens/OrganizationPeople/OrganizationPeople.module.css
@@ -244,6 +244,8 @@
   color: #707070;
   font-weight: 600;
   font-size: 14px;
+  display: flex;
+  flex-direction: column;
 }
 .radio_buttons > input {
   transform: scale(1.2);
